@@ -6,6 +6,7 @@
     - Add Test::Spelling and fix all spelling errors in POD. RT #89165
     - Reorder jobs when prioritize is set. RT #99075
     - Fix wrong return precedence. RT #87222
+    - Fix get_server_time for Oracle. # RT #58049
 
 1.10 (2010-03-15)
     - Add $job->declined method for workers to be able to decline handling
